--- a/views/createAlbum.ejs
+++ b/views/createAlbum.ejs
@@ -14,12 +14,17 @@
                 <li><a href="/">Albums</a></li>
                 <li><a href="/artists">Artists</a></li>
                 <li><a href="/genres">Genres</a></li>
+                <li><a href="/create">Create Album</a></li>
             </ul>
         </nav>
         <div class="mainContainer">
-            <% if(albums) { %>
-            <form action="/artists/:artist/:album" method="post">
-                <input type="hidden" name="_method" value="put" />
+            <% if(typeof albums !== 'undefined') { %>
+            <form
+                action="/artists/<%= albums.artist %>/<%= albums.album %>?_method=PUT"
+                method="POST"
+            >
+                <input type="hidden" name="_method" value="PUT" />
+                <input type="hidden" name="id" value="<%= albums.id %>" />
                 <label for="album">Album Name</label>
                 <input
                     type="text"
@@ -52,8 +57,9 @@
                 />
                 <button type="submit">Update</button>
             </form>
+
             <% } else { %>
-            <form action="/artists/:artist/:album" method="post">
+            <form action="/create" method="post">
                 <label for="album">Album Name</label>
                 <input type="text" name="album" id="album" />
                 <label for="artist">Artist</label>
