--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,6 +14,7 @@
                 <li><a href="/">Albums</a></li>
                 <li><a href="/artists">Artists</a></li>
                 <li><a href="/genres">Genres</a></li>
+                <li><a href="/create">Create Album</a></li>
             </ul>
         </nav>
         <div class="mainContainer">
