--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -30,6 +30,8 @@ header {
     background-color: #333;
     padding: 2.5rem 0;
     text-align: center;
+    position: sticky;
+    top: 0;
 }
 
 header a {
